- Makefile tools/mkrom.c: New mkrom tool to build custom ROM images. (VRI)
- .cvsignore Makefile release.mk doc/readme-cartridge.txt tools/mkrom.c: Added
  support to build Steem Engine cartridge image. (VRI)
- bios/screen.c bios/screen.h: Fixed compilation for non-Atari hardware. (VRI)

2012-06-05
- aes/gemdosif.S bios/vectors.S util/miscasm.S: Remove useless globals. (VRI)
- bios/kprint.c: Remove ugly MIT assembled syntax. (VRI)
- include/portab.h bios/kprint.c: Remove dependencies to the MiNTLib. (VRI)
- doc/*: Update the documentation. (VRI)

2012-06-15
- tools/bug.c: report which file is missing (PES)
- po/cs.po: updated Czech translation (PES)

2012-06-17
- tools/bug.c: Fixed memory allocation problem. (THH)
- desk/desktop.rsc: Fixed button widths in change resolution dialog. (RFB)

2012-06-18
- include/compat.h include/portab.h: Fix strict-aliasing warnings with GCC 4.7.1
  and potential issues. (VRI)
- *: Converted text files to UTF-8. Suggested by David Savinkoff. (VRI)
- Makefile: Added "make charset" to check the sources charset. (VRI)

2012-06-19
- desk/deskmain.c: Fixed about box version in translated UNIQUE builds. (VRI)
- util/bootsect.S: Fixed emutos.st to avoid trashing the startup screen when
  running on 512 MB machines. (VRI)
- doc/announce.txt: Updated the release date. (VRI)

* Release: 0.8.7

2012-06-20
- desk/deskmain.c desk/desktop.dfn: Added labels to About box tree to
  avoid hardcoded object numbers. (RFB)

2012-06-22
- bios/screen.c: Split vmode table for clarity & future refactoring. (RFB)
- bios/screen.c: Save space & time by eliminating entries with duplicate
  data in vga vmode table. (RFB)
- bios/screen.c bios/screen.h: Use default videl boot resolution if VDI
  does not support NVRAM value. (RFB)
- bios/vectors.S: Clean up for __mcoldfire__ and CONF_ATARI_HARDWARE. (VRI)
- bios/ide.c: Reorganization for future changes. (VRI)
- bios/screen.c: Update comments to reflect recent changes. (RFB)