@@ -3693,3 +3693,4 @@ Start... early ages
 - bios/vectors.S: Clean up for __mcoldfire__ and CONF_ATARI_HARDWARE. (VRI)
 - bios/ide.c: Reorganization for future changes. (VRI)
 - bios/screen.c: Update comments to reflect recent changes. (RFB)
+- bdos/bdosmain.c: Remove function wrappers (no longer needed). (RFB)
